tools/apply-cost-centers-error.txt
file:///home/runner/work/-pedidos-proveedores-pwa/-pedidos-proveedores-pwa/tools/apply-cost-centers-login-ui.mjs:526
function centerChecks(selected=[]){return (state.cache.costCenters||[]).map(center=>`<label class="check-card"><input type="checkbox" name="costCenterIds" value="${esc(center.id)}" ${selected.includes(center.id)||(!selected.length&&center.code==='BARRA')?'checked':''}><span><strong>${esc(center.name)}</strong><small>${esc(center.locationName)}</small></span></label>`).join('')}
                                                                                      ^^^^^

SyntaxError: missing ) after argument list
    at compileSourceTextModule (node:internal/modules/esm/utils:346:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:110:18)
    at #translate (node:internal/modules/esm/loader:559:20)
    at afterLoad (node:internal/modules/esm/loader:612:29)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:617:12)
    at #createModuleJob (node:internal/modules/esm/loader:640:36)
    at #getJobFromResolveResult (node:internal/modules/esm/loader:353:34)
    at ModuleLoader.getModuleJobForImport (node:internal/modules/esm/loader:321:41)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:680:25)

Node.js v22.23.1
